# journal

./: Cargo.toml  README.md
example/: full.md
src/: config.rs  controlled_clock.rs  github.rs  jira.rs  lib.rs  main.rs  notes.rs  reminders.rs  storage.rs  template.rs  todo.rs
template/: day.md
tests/: basic_usage.rs
tests.disabled/: basic_usage.rs
