[package]
name = "journal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0-rc.3", features = ["derive"] }
comfy-table = "5.0.0"
dirs = "4.0.0"
figment = { version = "0.10.6", features = ["test", "env", "yaml"] }
futures = { version = "0.3" }
octocrab = { version = "0.12" }
open = { version = "2.0.2" }
pulldown-cmark = { version = "0.8.0" }
pulldown-cmark-to-cmark = { version = "7.1.0" }
regex = { version = "1.5" }
serde = { version = "1.0.130", features = ["derive" ] }
serde_json = {version = "1.0" }
tokio = { version = "1", features = ["full"] }
tera = { version = "1", default-features = false }
time = { version = "0.3.5", features = ["formatting", "macros", "parsing", "serde","serde-human-readable", "std"] }
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-futures = { version = "0.2", features = ["tokio"] }
tracing-subscriber = "0.2.0"

[dev-dependencies]
assert_fs = "1.0"
assert_cmd = { version = "2.0.2", features = ["color-auto"] }
data-test = "0.1.0"
indoc = "1.0"
predicates = "2.1"
serde_yaml = "0.8"
tracing-test = "0.2.1"
