[package]
name = "journal"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1.52"
clap = { version = "3.0.0-rc.3", features = ["derive"] }
dirs = "4.0.0"
futures = { version = "0.3" }
handlebars = { version = "4.2.1", features = [] }
indoc = "1.0"
octocrab = { version = "0.15" }
open = { version = "2.0.2" }
pulldown-cmark = { version = "0.9.0" }
regex = { version = "1.5" }
serde = { version = "1.0.130", features = ["derive" ] }
serde_json = { version = "1.0" }
serde_yaml = { version  = "0.8" }
tabled = { version = "0.4.2" }
tokio = { version = "1", features = [ "rt", "macros"] }
time = { version = "0.3.5", features = ["formatting", "macros", "parsing", "serde","serde-human-readable", "std"] }
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-subscriber = "0.3.5"
reqwest = { version = "0.11.8", features =["serde_json"] }
jsonpath = "0.1.1"

[dev-dependencies]
assert_fs = { version = "1.0", features = ["color-auto"] }
assert_cmd = { version = "2.0.2", features = ["color-auto"] }
data-test = "0.1.0"
predicates = "2.1"
pretty_assertions = "1.0.0"
tracing-test = "0.2.1"
maplit = "1.0.2"
